--- a/client/ACapp/AndroidManifest.xml
+++ b/client/ACapp/AndroidManifest.xml
@@ -6,7 +6,11 @@
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="15" />
-
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.WRITE_APN_SETTINGS" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
@@ -20,6 +24,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ACCategoryActivity"></activity>
+        <activity android:name=".ACDetailInfoActivity"></activity>
+        <activity android:name=".ACMainActivity"></activity>
+        <activity android:name=".ACShakeActivity"></activity>
+        <!-- OAuth Version 2. 使用  WebView 辅助进行ImplicitGrant方式授权必须 -->
+		<activity
+    		android:name="com.tencent.weibo.webview.OAuthV2AuthorizeWebView"
+    		android:label="@string/app_name" >
+		</activity>
     </application>
 
 </manifest>
